tests/ui/inference/need_type_info/underscore-placeholder-wording.stderr
error[E0282]: type annotations needed for `&[_; 0]`
  --> $DIR/underscore-placeholder-wording.rs:5:9
   |
LL |     let v = &[];
   |         ^   --- type must be known at this point
   |
help: consider giving `v` an explicit type, where the placeholder `_` is specified
   |
LL |     let v: &[_; 0] = &[];
   |          +++++++++

error[E0282]: type annotations needed for `(Vec<_>, Vec<_>)`
  --> $DIR/underscore-placeholder-wording.rs:11:9
   |
LL |     let x = (vec![], vec![]);
   |         ^   ---------------- type must be known at this point
   |
help: consider giving `x` an explicit type, where the placeholders `_` are specified
   |
LL |     let x: (Vec<_>, Vec<_>) = (vec![], vec![]);
   |          ++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0282`.
